Added "More" button

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -114,5 +114,14 @@
 
   "videos_pastbroadcasts": {
     "message": "Past Broadcasts"
+  },
+  "videos_streamed_on": {
+    "message": "Streamed on %date% at %time%"
+  },
+  "videos_duration": {
+    "message": "Duration : %duration%"
+  },
+  "videos_see_all": {
+    "message": "More"
   }
 }
